fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,7 @@ input[type="range"]::-webkit-slider-runnable-track {
     height:100%;
     min-height:70vh;
     margin:10px 0;
+    backdrop-filter: blur(3px);
   }
   .card-body {
     display: block;
@@ -422,5 +423,12 @@ input[type="range"]::-webkit-slider-runnable-track {
     font-size:10px;
     margin:1rem;
     text-align:center;
+}
+.message{
+    width:80%;
+    margin:0 auto;
+}
+.message #action{
+    gap:0;
 }
 }
